# damasc-workspace

./: .gitignore  Cargo.toml  README.md  TODO.md  goal.txt
damasc-cli/: .gitignore  Cargo.toml  history.txt
damasc-cli/src/: error.rs  main.rs
damasc-grammar/: Cargo.toml
damasc-grammar/src/: assignment.rs  experiment.rs  expression.rs  grammar.lalrpop  identifier.rs  join.rs  json.rs  lib.rs  literal.rs  lpop.rs  main.rs  pattern.rs  query.rs  repl.rs  util.rs  value.rs
damasc-grammar/src/assignment/: parser.rs
damasc-grammar/src/expression/: parser.rs
damasc-grammar/src/identifier/: parser.rs
damasc-grammar/src/join/: parser.rs
damasc-grammar/src/literal/: parser.rs
damasc-grammar/src/lpop/: error.rs  grammar.lalrpop  lexer.rs  tokens.rs
damasc-grammar/src/pattern/: parser.rs
damasc-grammar/src/query/: parser.rs
damasc-grammar/src/repl/: parser.rs
damasc-grammar/src/value/: parser.rs
damasc-grammar/tests/: examples_expressions.txt  expression.rs  lalrpop.rs
damasc-http/: Cargo.toml
damasc-http/src/: main.rs
damasc-http/templates/: examples.html.j2  result.html.j2
damasc-join/: Cargo.toml
damasc-join/src/: bag.rs  bag_bundle.rs  controller.rs  identity.rs  iter.rs  join.rs  lib.rs  operations.rs  parser.rs
damasc-join/tests/: bag_bundle.rs  controller.rs  example_bundle.txt  example_bundle_duplicate.txt  example_join_full.txt  example_join_no_assign.txt  example_join_no_guard.txt  example_join_only_in.txt  example_join_only_out.txt  example_join_simple.txt  example_join_simple_with_const.txt  example_join_simple_with_insert.txt  join.rs
damasc-lang/: Cargo.toml
damasc-lang/src/: identifier.rs  lib.rs  literal.rs  parser.rs  runtime.rs  syntax.rs  topology.rs  type.rs  value.rs  value_type.rs
damasc-lang/src/parser/: assignment.rs  error.rs  expression.rs  identifier.rs  io.rs  literal.rs  located.rs  pattern.rs  util.rs  value.rs
damasc-lang/src/runtime/: assignment.rs  env.rs  evaluation.rs  matching.rs
damasc-lang/src/syntax/: assignment.rs  expression.rs  iterator.rs  level.rs  location.rs  pattern.rs
damasc-lang/tests/: assignment.rs  examples_assignments.txt  examples_expression_pairs.txt  examples_mismatch.txt  examples_topology_fail.txt  examples_values.txt  expression.rs  matching.rs  topology.rs  value.rs  value_examples.txt
damasc-query/: Cargo.toml
damasc-query/src/: capture.rs  error.rs  iter.rs  lib.rs  parser.rs  predicate.rs  projection.rs  transformation.rs
damasc-query/tests/: example_values.txt  iter.rs  transformation.rs  transformation_examples.txt
damasc-repl/: Cargo.toml
damasc-repl/src/: command.rs  io.rs  lib.rs  parser.rs  state.rs
damasc-ui/: Cargo.toml
damasc-wasm/: Cargo.toml
damasc-wasm/js/: damasc.js
damasc-wasm/public/: index.html  style.css
damasc-wasm/src/: error.rs  lib.rs
