[package]
name = "damasc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
damasc-lang = { path = "../damasc-lang" }
damasc-query = { path = "../damasc-query" }
damasc-repl = { path = "../damasc-repl" }
rustyline = "10.1.1"
