[package]
name = "damasc-grammar"
version = "0.1.0"
edition = "2021"

[features]
default = ["assignment","query","repl"]
value = []
expression = ["value"]
pattern = []
assignment = ["expression", "pattern"]
query = ["assignment", "dep:damasc-query"]
join = ["assignment", "dep:damasc-query"]
repl = ["assignment", "query", "dep:damasc-repl"]

[dependencies]
damasc-lang = { path = "../damasc-lang" }
damasc-query = { path = "../damasc-query", optional = true }
damasc-join = { path = "../damasc-join", optional = true }
damasc-repl = { path = "../damasc-repl", optional = true }
chumsky = {version = "1.0.0-alpha.0", features = ["label"]}
ariadne = "0.4.0"
lalrpop-util = "0.20.2"
logos = "0.14.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.2"