[package]
name = "damasc-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.0"
askama = "0.11.1"
serde = "1.0.152"
damasc-repl = {path="../damasc-repl"}
damasc-lang = {path="../damasc-lang"}