[package]
name = "damasc-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = {version="1.0.0"}
wasm-bindgen = {version="0.2.83"}
wee_alloc = {version="0.4.5"}
damasc-repl = {path="../damasc-repl"}